Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -83,7 +83,9 @@
    "outputs": [],
    "source": [
     "greenville_population = 84554 # change None\n",
-    "greenville_population # 84554\n"
+    "greenville_population # 84554\n",
+    "\n",
+    "greenville_population = 84554 # change None"
    ]
   },
   {
