Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -82,10 +82,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "greenville_population = 84554 # change None\n",
+    "greenville_population = None # change None\n",
     "greenville_population # 84554\n",
     "\n",
-    "greenville_population = 84554 # change None"
+    "greenville_population = 84554"
    ]
   },
   {
