--- a/index.ipynb
+++ b/index.ipynb
@@ -102,7 +102,8 @@
    "outputs": [],
    "source": [
     "greenville_area = None\n",
-    "greenville_area # 68"
+    "greenville_area # 68\n",
+    "\n"
    ]
   },
   {
