--- a/index.ipynb
+++ b/index.ipynb
@@ -97,13 +97,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "greenville_area = None\n",
     "greenville_area # 68\n",
-    "\n"
+    "\n",
+    "greenville_area = 68"
    ]
   },
   {
