--- a/index.ipynb
+++ b/index.ipynb
@@ -120,7 +120,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "city_keys = None\n",
+    "city_keys = ['Area', 'City', 'Country', 'Population']\n",
     "city_keys # ['Area', 'City', 'Country', 'Population']"
    ]
   },
