Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -149,7 +149,9 @@
    "outputs": [],
    "source": [
     "city_values = [68, 'Greenville', 'USA', 84554]\n",
-    "city_values # [68, 'Greenville', 'USA', 84554]"
+    "city_values # [68, 'Greenville', 'USA', 84554]\n",
+    "\n",
+    "City_"
    ]
   },
   {
