--- a/index.ipynb
+++ b/index.ipynb
@@ -319,7 +319,7 @@
    ],
    "source": [
     "salina = cities[-3].values()\n",
-    "salina = cities\n",
+    "salina = cities[-3]\n",
     "# {'Area': 27, 'City': 'Salina Island', 'Country': 'Italy', 'Population': 4000}"
    ]
   },
