--- a/index.ipynb
+++ b/index.ipynb
@@ -307,7 +307,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "salina = cities[-3].values()\n",
+    "salina = cities[-3]\n",
     "salina = cities[-3]\n",
     "# {'Area': 27, 'City': 'Salina Island', 'Country': 'Italy', 'Population': 4000}"
    ]
