--- a/index.ipynb
+++ b/index.ipynb
@@ -309,7 +309,7 @@
    "source": [
     "salina = cities[-3]\n",
     "salina = cities[-3]\n",
-    "# {'Area': 27, 'City': 'Salina Island', 'Country': 'Italy', 'Population': 4000}"
+    "# {'Area': 27, 'City': 'Salina Island', 'Country': 'Italy', 'Population': 4000}\n"
    ]
   },
   {
