--- a/index.ipynb
+++ b/index.ipynb
@@ -303,13 +303,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'City': 'Salina Island', 'Country': 'Italy', 'Population': 4000, 'Area': 27}"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "salina = cities[-3]\n",
     "salina = cities[-3]\n",
-    "# {'Area': 27, 'City': 'Salina Island', 'Country': 'Italy', 'Population': 4000}\n"
+    "# {'Area': 27, 'City': 'Salina Island', 'Country': 'Italy', 'Population': 4000}\n",
+    "\n",
+    "salina"
    ]
   },
   {
