--- a/index.ipynb
+++ b/index.ipynb
@@ -338,8 +338,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "los_cabos_pop = None\n",
-    "los_cabos_pop # 287651"
+    "cities[5]"
    ]
   },
   {
