Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -334,22 +334,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'City': 'Marakesh', 'Country': 'Morocco', 'Population': 928850, 'Area': 200}"
+       "{'City': 'Walla Walla Valley',\n",
+       " 'Country': 'USA',\n",
+       " 'Population': 32237,\n",
+       " 'Area': 33}"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "cities[5]"
+    "cities[4]"
    ]
   },
   {
