--- a/index.ipynb
+++ b/index.ipynb
@@ -334,19 +334,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'City': 'Walla Walla Valley',\n",
-       " 'Country': 'USA',\n",
-       " 'Population': 32237,\n",
-       " 'Area': 33}"
+       "{'City': 'Los Cabos', 'Country': 'Mexico', 'Population': 287651, 'Area': 3750}"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
