--- a/index.ipynb
+++ b/index.ipynb
@@ -349,7 +349,7 @@
     }
    ],
    "source": [
-    "los_cabos_pop = cities[3]['Population']"
+    "los_cabos_pop = cities[3]['Population']\n"
    ]
   },
   {
