--- a/index.ipynb
+++ b/index.ipynb
@@ -349,7 +349,8 @@
     }
    ],
    "source": [
-    "los_cabos_pop = cities[3]['Population']\n"
+    "los_cabos_pop = cities[3]['Population']\n",
+    "los_cabos_pop"
    ]
   },
   {
