--- a/index.ipynb
+++ b/index.ipynb
@@ -368,7 +368,7 @@
    },
    "outputs": [],
    "source": [
-    "city_count = len(cities)\n",
+    "city_count = len(cities[ci])\n",
     "city_count # 12"
    ]
   },
