--- a/index.ipynb
+++ b/index.ipynb
@@ -380,7 +380,7 @@
     }
    ],
    "source": [
-    "city_count = len(cities[City])\n",
+    "city_count = len(cities)\n",
     "city_count # 12"
    ]
   },
