Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -407,7 +407,7 @@
     }
    ],
    "source": [
-    "cities[11]['City']\n",
+    "cities[11]['City'] = None\n",
     "cities[11]['City'] # 'PyeongChang'"
    ]
   },
