--- a/index.ipynb
+++ b/index.ipynb
@@ -407,7 +407,7 @@
     }
    ],
    "source": [
-    "cities[11]['City'] = None\n",
+    "cities[11]['City'] = 'P'\n",
     "cities[11]['City'] # 'PyeongChang'"
    ]
   },
