--- a/index.ipynb
+++ b/index.ipynb
@@ -392,7 +392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -401,13 +401,13 @@
        "'PyeongChang'"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "cities[11]['City'] \n",
+    "cities[11]['City'] = 'PyeongChang'\n",
     "cities[11]['City'] # 'PyeongChang'"
    ]
   },
