--- a/index.ipynb
+++ b/index.ipynb
@@ -435,7 +435,7 @@
     }
    ],
    "source": [
-    "pyeongchang_values = cities[11]\n",
+    "pyeongchang_values = cities[0].keys()\n",
     "\n",
     "pyeongchang_values # ['PyeongChang', 'South Korea', 2581000, 3194]\n",
     "type(pyeongchang_values) # list"
