--- a/index.ipynb
+++ b/index.ipynb
@@ -408,7 +408,9 @@
    ],
    "source": [
     "cities[11]['City'] = 'PyeongChang'\n",
-    "cities[11]['City'] # 'PyeongChang'"
+    "cities[11]['City'] # 'PyeongChang'\n",
+    "\n",
+    "cities[]"
    ]
   },
   {
