Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -392,16 +392,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'PyeongChang'"
+       "{'City': 'PyeongChang',\n",
+       " 'Country': 'South Korea',\n",
+       " 'Population': 2581000,\n",
+       " 'Area': 3194}"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -410,7 +413,7 @@
     "cities[11]['City'] = 'PyeongChang'\n",
     "cities[11]['City'] # 'PyeongChang'\n",
     "\n",
-    "cities[]"
+    "cities[11]"
    ]
   },
   {
