Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -413,7 +413,7 @@
     "cities[11]['City'] = 'PyeongChang'\n",
     "cities[11]['City'] # 'PyeongChang'\n",
     "\n",
-    "cities[11]"
+    "list(cities[0].keys())"
    ]
   },
   {
