Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -392,19 +392,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'City': 'PyeongChang',\n",
-       " 'Country': 'South Korea',\n",
-       " 'Population': 2581000,\n",
-       " 'Area': 3194}"
+       "['City', 'Country', 'Population', 'Area']"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -413,7 +410,7 @@
     "cities[11]['City'] = 'PyeongChang'\n",
     "cities[11]['City'] # 'PyeongChang'\n",
     "\n",
-    "list(cities[0].keys())"
+    "list(cities[11].keys())"
    ]
   },
   {
