Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -392,16 +392,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['City', 'Country', 'Population', 'Area']"
+       "['PyeongChang', 'South Korea', 2581000, 3194]"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -410,7 +410,7 @@
     "cities[11]['City'] = 'PyeongChang'\n",
     "cities[11]['City'] # 'PyeongChang'\n",
     "\n",
-    "list(cities[11].keys())"
+    "list(cities[11].values())"
    ]
   },
   {
