--- a/index.ipynb
+++ b/index.ipynb
@@ -437,6 +437,7 @@
     }
    ],
    "source": [
+    "list(cities[11].values())\n",
     "pyeongchang_values = list(cities[11].values())\n",
     "\n",
     "pyeongchang_values # ['PyeongChang', 'South Korea', 2581000, 3194]\n",
