--- a/index.ipynb
+++ b/index.ipynb
@@ -437,6 +437,7 @@
     }
    ],
    "source": [
+    "cities[0].values()\n",
     "list(cities[11].values())\n",
     "pyeongchang_values = list(cities[11].values())\n",
     "\n",
