Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -422,16 +422,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "list"
+       "['PyeongChang', 'South Korea', 2581000, 3194]"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -441,8 +441,7 @@
     "list(cities[11].values())\n",
     "pyeongchang_values = list(cities[11].values())\n",
     "\n",
-    "pyeongchang_values # ['PyeongChang', 'South Korea', 2581000, 3194]\n",
-    "type(pyeongchang_values) # list"
+    "pyeongchang_values "
    ]
   },
   {
