--- a/index.ipynb
+++ b/index.ipynb
@@ -457,9 +457,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pyeongchang_keys = None\n",
+    "cities[11].keys()\n",
+    "list(cities[11].keys())\n",
+    "pyeongchang_values = list(cities[11].keys())\n",
     "\n",
-    "\n",
+    "pyeongchang_keys\n",
     "pyeongchang_keys # ['City', 'Country', 'Population', 'Area']\n",
     "type(pyeongchang_keys) # list"
    ]
